--- a/ComputerScienceCalculator.html
+++ b/ComputerScienceCalculator.html
@@ -1,9 +1,12 @@
 ﻿<!DOCTYPE html>
+<!--
 <style>
+
     body {
         background: url(Images/DNDBKGTemplate2.png) repeat-x bottom;
     }
 </style>
+    -->
 <html>
 <head>
     <meta charset="utf-8" />
@@ -15,13 +18,13 @@
 </head>
 <body>
     <div>
-        <center><img src="Images/DevelopedNotDownloaded.png" height="300" alt="Logo"/></center>
+        <center><img src="Images/DevelopedNotDownloaded.png" height="300" alt="Logo" /></center>
         <hr />
     </div>
     <nav>
         <ul class="nav">
-            <li class="navitem active"><a href="index.html">Home</a></li>
-            <li class="dropdown navitem">
+            <li class="navitem"><a href="index.html">Home</a></li>
+            <li class="dropdown navitem active">
                 <a href="javascript:void(0)" class="dropbtn">iOS Apps</a>    <!--Void so it does not link to a webpage-->
                 <div class="dropdown-content">
                     <a href="PutterFitter.html">Putter Fitter</a>
@@ -50,21 +53,13 @@
             <li class="navitem"><a href="Blog.html">Blog</a></li>
         </ul>
     </nav>
-    <h1>Offical Website of Developed Not Downloaded</h1>
-    <h2>The start of something big.</h2>
-    <h3>A website for mobile app support; A website for ongoing projects; A website for a future plan; A website about the developer, Andrew Rotert</h3>
-    <div class="container">
-        <img src="Images/LaptopFW.png" alt="Laptop" class="resize"/>
-    </div>
-    <p>Developed Not Downloaded gets its name from the passion that
-     stems from building a product. As the name suggests, a product is being created that may not exist anywhere. A pice of software is acquired by developing it, not just downloading it.</p>
     <footer>
         <div class="right_position">
             <img src="Images/ARLogo.png" height="150" alt="Andrew Rotert Development Logo" />
             <br />
             <p class="bottom_position">&copy Copyright 2019-2020 Andrew Rotert</p>
         </div>
-        
+
     </footer>
 </body>
 </html>
