--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </head>
 <body>
     <div>
-        <center><img src="Images/DevelopedNotDownloaded.png" height="300" alt="Logo"/></center>
-        <hr />
+        <center><img src="Images/DevelopedNotDownloaded.png" height="300" alt="Logo" /></center>
+        <hr class="nav" />
     </div>
     <nav>
         <ul class="nav">
@@ -50,21 +50,59 @@
             <li class="navitem"><a href="Blog.html">Blog</a></li>
         </ul>
     </nav>
-    <h1>Offical Website of Developed Not Downloaded</h1>
-    <h2>The start of something big.</h2>
-    <h3>A website for mobile app support; A website for ongoing projects; A website for a future plan; A website about the developer, Andrew Rotert</h3>
+    <hr class="nav" />
     <div class="container">
-        <img src="Images/LaptopFW.png" alt="Laptop" class="resize"/>
+        <img src="Images/LaptopFW.png" alt="Laptop" class="resize" />
+        <div class="centered">
+            <h1 class="index">Offical Website of Developed Not Downloaded</h1>
+            <h2 class="index">The start of something big.</h2>
+        </div>
     </div>
-    <p>Developed Not Downloaded gets its name from the passion that
-     stems from building a product. As the name suggests, a product is being created that may not exist anywhere. A pice of software is acquired by developing it, not just downloading it.</p>
+    <hr class="indexTop" />
+    <h3 class="index">
+        Developed Not Downloaded gets its name from the passion that
+        stems from building a product. As the name suggests, a product is being created that may not exist anywhere. A piece of software is acquired by developing it, not just downloading it.
+    </h3>
+    <hr class="indexBottom" />
+
+    <table class="format">
+        <tr>
+            <td><img src="Images/Support.png" alt="Mobile App Support" /></td>
+            <td><h2>A website for mobile app support</h2></td>
+        </tr>
+        <tr>
+            <td>
+                <h2>A website for ongoing projects</h2>
+            </td>
+            <td>
+                <img src="Images/Projects.png" alt="Ongoing Projects" />
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="Images/Future.png" alt="Future Business Plan" />
+            </td>
+            <td>
+                <h2>A website for a future business platform</h2>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <h2>A website about the developer, Andrew Rotert</h2>
+            </td>
+            <td>
+                <img src="Images/Self.png" alt="About Developer" />
+            </td>
+        </tr>
+    </table>
+
     <footer>
         <div class="right_position">
             <img src="Images/ARLogo.png" height="150" alt="Andrew Rotert Development Logo" />
             <br />
             <p class="bottom_position">&copy Copyright 2019-2020 Andrew Rotert</p>
         </div>
-        
+
     </footer>
 </body>
 </html>
