--- a/PutterFitter.html
+++ b/PutterFitter.html
@@ -19,7 +19,7 @@
 <body>
     <div>
         <center><img src="Images/DevelopedNotDownloaded.png" height="300" alt="Logo" /></center>
-        <hr />
+        <hr class="nav"/>
     </div>
     <nav>
         <ul class="nav">
