--- a/AboutMe.html
+++ b/AboutMe.html
@@ -19,7 +19,7 @@
 <body>
     <div>
         <center><img src="Images/DevelopedNotDownloaded.png" height="300" alt="Logo" /></center>
-        <hr class="nav"/>
+        <hr class="nav" />
     </div>
     <nav>
         <ul class="nav">
@@ -53,6 +53,10 @@
             <li class="navitem"><a href="Blog.html">Blog</a></li>
         </ul>
     </nav>
+    <hr class="nav" />
+
+    <center><h1 class="pages">About Me</h1></center>
+
     <footer>
         <div class="right_position">
             <img src="Images/ARLogo.png" height="150" alt="Andrew Rotert Development Logo" />
