--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <table class="format">
         <tr>
-            <td><img src="Images/Support.png" alt="Mobile App Support" /></td>
+            <td><img class="format" src="Images/Support.png" alt="Mobile App Support" /></td>
             <td><h2>A website for mobile app support</h2></td>
         </tr>
         <tr>
@@ -75,12 +75,12 @@
                 <h2>A website for ongoing projects</h2>
             </td>
             <td>
-                <img src="Images/Projects.png" alt="Ongoing Projects" />
+                <img class="format" src="Images/Projects.png" alt="Ongoing Projects" />
             </td>
         </tr>
         <tr>
             <td>
-                <img src="Images/Future.png" alt="Future Business Plan" />
+                <img class="format" src="Images/Future.png" alt="Future Business Plan" />
             </td>
             <td>
                 <h2>A website for a future business platform</h2>
@@ -91,7 +91,7 @@
                 <h2>A website about the developer, Andrew Rotert</h2>
             </td>
             <td>
-                <img src="Images/Self.png" alt="About Developer" />
+                <img class="format" src="Images/Self.png" alt="About Developer" />
             </td>
         </tr>
     </table>
