--- a/AboutMe.html
+++ b/AboutMe.html
@@ -10,7 +10,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Developed Not Downlaoded</title>
+    <title>Developed Not Downlaoded | About The Developer</title>
     <link rel="icon" type="image/x-icon" href="Images/DevLogo.ico" />
     <link rel="stylesheet" href="Styles/normalize.css" />
     <link rel="stylesheet" href="Styles/defaults.css" />
