--- a/PutterFitter.html
+++ b/PutterFitter.html
@@ -10,7 +10,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Developed Not Downlaoded</title>
+    <title>Developed Not Downlaoded | Putter Fitter App</title>
     <link rel="icon" type="image/x-icon" href="Images/DevLogo.ico" />
     <link rel="stylesheet" href="Styles/normalize.css" />
     <link rel="stylesheet" href="Styles/defaults.css" />
@@ -54,9 +54,100 @@
         </ul>
     </nav>
     <hr class="nav" />
-
+    <nav>
+        <ul class="sidenav">
+            <li class="sidenav"><img src="Images/AppLogos/Putter.png"/></li>
+            <li class="sidenav"><a href="#screen_page_link">Screenshots</a></li>
+            <li class="sidenav"><a href="#about_page_link">About</a></li>
+            <li class="sidenav"><a href="#privacy_page_link">Privacy Policy</a></li>
+        </ul>
+    </nav>
     <center><h1 class="pages">Putter Fitter</h1></center>
-
+    <h2 class="pages"><object id="screen_page_link">Screenshots</object></h2>
+    <div class="pagesformat">
+        <table class="format">
+            <tr>
+                <td class="five"><img class="resizetwothrids" src="Images/PS/One.png" /></td>
+                <td class="five"><img class="resizetwothrids" src="Images/PS/Two.png" /></td>
+                <td class="five"><img class="resizetwothrids" src="Images/PS/Three.png" /></td>
+                <td class="five"></td>
+                <td class="five"></td>
+            </tr>
+        </table>
+    </div>
+    <h2 class="pages" id="about_page_link">About</h2>
+    <div class="pagesformat">
+        <h3>Current Availability</h3>
+        <p>Putter Fitter is available for free on the iOS app store. It can only be downloaded as an iPhone application.</p>
+        <p><strong><a href="https://itunes.apple.com/us/app/putter-fitter/id1448329273?mt=8">Download from the App Store here.</a></strong></p>
+        <h3>App Description</h3>
+        <p>Answer 9-10 simple questions about your putting game. After that your answers are input into the AI and the best fitting putters for your game are output.</p>
+        <ul>
+            <li>Over 50+ putters are compared.</li>
+            <li>Estimates length.</li>
+            <li>Approximates a grip style</li>
+            <li>Quick and easy!</li>
+            <li>View more information about the putter.</li>
+        </ul>
+        <h3>Now Includes</h3>
+        <p>Recent updates have added the following:</p>
+        <ul>
+            <li>New User Interface</li>
+            <li>New Loading Screen</li>
+            <li>Updated Putter Selection</li>
+            <li>New Privacy Policy</li>
+        </ul>
+    </div>
+    <h2 class="pages"><object id="privacy_page_link">Privacy Policy</object></h2>
+    <div class="pagesformat">
+        <h3>Privacy Policy</h3>
+        <p>
+            Andrew Rotert built the Putter Fitter app as a Free app. This SERVICE is provided by Andrew Rotert at no cost and is intended for use as is.
+            This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
+            If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
+            The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Putter Fitter unless otherwise defined in this Privacy Policy.
+        </p>
+        <h3>Information Collection and Use</h3>
+        <p>
+            For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.
+            The app does use third party services that may collect information used to identify you.
+            Link to privacy policy of third party service providers used by the app
+        </p>
+        <h3>Log Data</h3>
+        <p>
+            I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.
+        </p>
+        <h3>Cookies</h3>
+        <p>
+            Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device's internal memory.
+            This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.
+        </p>
+        <h3>Service Providers</h3>
+        <p>
+            I may employ third-party companies and individuals due to the following reasons: To facilitate our Service; To provide the Service on our behalf; To perform Service-related services; or to assist us in analyzing how our Service is used.
+            I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.
+        </p>
+        <h3>Security</h3>
+        <p>
+            I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.
+        </p>
+        <h3>Links to Other Sites</h3>
+        <p>
+            This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
+        </p>
+        <h3>Children’s Privacy</h3>
+        <p>
+            These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.
+        </p>
+        <h3>Changes to This Privacy Policy</h3>
+        <p>
+            I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.
+        </p>
+        <h3>Contact Us</h3>
+        <p>
+            If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at Andrew.Rotert@gmail.com.
+        </p>
+    </div>
     <footer>
         <div class="right_position">
             <img src="Images/ARLogo.png" height="150" alt="Andrew Rotert Development Logo" />
