--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Developed Not Downlaoded</title>
+    <title>Developed Not Downlaoded | Home</title>
     <link rel="icon" type="image/x-icon" href="Images/DevLogo.ico" />
     <link rel="stylesheet" href="Styles/normalize.css" />
     <link rel="stylesheet" href="Styles/defaults.css" />
