--- a/Android.html
+++ b/Android.html
@@ -37,7 +37,7 @@
             <li class="dropdown navitem">
                 <a href="javascript:void(0)" class="dropbtn">Andriod Apps</a>    <!--Void so it does not link to a webpage-->
                 <div class="dropdown-content">
-                    <a href="LiftForceCalculator.html">Lift Force Calculator</a>
+                    <a href="LiftForceCalculator.html">Lift Coefficient Calculator</a>
                 </div>
             </li>
             <li class="dropdown navitem active">
@@ -56,6 +56,30 @@
     <hr class="nav" />
 
     <center><h1 class="pages">Andriod Projects</h1></center>
+
+    <table class="format">
+        <tr>
+            <td class="format">
+                <img class="format" src="Images/AppLogos/Lift.png" alt="Lift Force Calculator" />
+                <h2><i>Lift Force Calculator</i></h2>
+                <p>Published: <a href="LiftForceCalculator.html">Support Page</a></p>
+                <p>View at the Google Play Store: <a href="https://play.google.com/store/apps/details?id=com.ar.liftcalculator">Visit Now</a></p>
+                <p>Language Used: C#</p>
+                <p>About:</p>
+                <p class="just">
+                    Lift Coefficient Calclulator uses an Andriod based platform to calculate the lift coefficient formula.
+                    The user interface implaments event handlers for each text field, allowing calculations to happen
+                    as soon as all the need input is provided.
+                    
+                </p>
+
+                <hr class="table" />
+            </td>
+            <td class="format">
+                <!--Blank-->
+            </td>
+        </tr>
+    </table>
 
     <footer>
         <div class="right_position">
