--- a/LiftForceCalculator.html
+++ b/LiftForceCalculator.html
@@ -10,7 +10,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Developed Not Downlaoded | Lift Force Calculator App</title>
+    <title>Developed Not Downlaoded | Lift Coefficient Calculator App</title>
     <link rel="icon" type="image/x-icon" href="Images/DevLogo.ico" />
     <link rel="stylesheet" href="Styles/normalize.css" />
     <link rel="stylesheet" href="Styles/defaults.css" />
@@ -37,7 +37,7 @@
             <li class="dropdown navitem active">
                 <a href="javascript:void(0)" class="dropbtn">Andriod Apps</a>    <!--Void so it does not link to a webpage-->
                 <div class="dropdown-content">
-                    <a href="LiftForceCalculator.html">Lift Force Calculator</a>
+                    <a href="LiftForceCalculator.html">Lift Coefficient Calculator</a>
                 </div>
             </li>
             <li class="dropdown navitem">
@@ -62,7 +62,7 @@
             <li class="sidenav"><a href="#privacy_page_link">Privacy Policy</a></li>
         </ul>
     </nav>
-    <center><h1 class="pages">Lift Force Calculator</h1></center>
+    <center><h1 class="pages">Lift Coefficient Calculator</h1></center>
     <h2 class="pages"><object id="screen_page_link">Screenshots</object></h2>
     <div class="pagesformat">
         <table class="format">
@@ -78,7 +78,7 @@
     <h2 class="pages" id="about_page_link">About</h2>
     <div class="pagesformat">
         <h3>Current Availability</h3>
-        <p>Lift Force Calculator is available for free on the Andriod app store. It can only be downloaded as an Andriod application.</p>
+        <p>Lift Coefficient Calculator is available for free on the Andriod app store. It can only be downloaded as an Andriod application.</p>
         <p><strong><a href="https://play.google.com/store/apps/details?id=com.ar.liftcalculator">Download from the Google Play Store here.</a></strong></p>
         <h3>App Description</h3>
         <p>
@@ -105,7 +105,7 @@
     <div class="pagesformat">
         <h3>Privacy Policy</h3>
         <p>
-            Andrew Rotert built the Lift Force Calculator app as a Free app. This SERVICE is provided by Andrew Rotert at no cost and is intended for use as is.
+            Andrew Rotert built the Lift Coefficient Calculator app as a Free app. This SERVICE is provided by Andrew Rotert at no cost and is intended for use as is.
             This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
             If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
             The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Putter Fitter unless otherwise defined in this Privacy Policy.
