--- a/iOS.html
+++ b/iOS.html
@@ -37,7 +37,7 @@
             <li class="dropdown navitem">
                 <a href="javascript:void(0)" class="dropbtn">Andriod Apps</a>    <!--Void so it does not link to a webpage-->
                 <div class="dropdown-content">
-                    <a href="LiftForceCalculator.html">Lift Force Calculator</a>
+                    <a href="LiftForceCalculator.html">Lift Coefficient Calculator</a>
                 </div>
             </li>
             <li class="dropdown navitem active">
