--- a/BusinessPlan.html
+++ b/BusinessPlan.html
@@ -37,7 +37,7 @@
             <li class="dropdown navitem">
                 <a href="javascript:void(0)" class="dropbtn">Andriod Apps</a>    <!--Void so it does not link to a webpage-->
                 <div class="dropdown-content">
-                    <a href="LiftForceCalculator.html">Lift Coefficient Calculator</a>
+                    <a href="LiftCoefficientCalculator.html">Lift Coefficient Calculator</a>
                 </div>
             </li>
             <li class="dropdown navitem">
@@ -248,6 +248,10 @@
         <p>
             A large part of Developed Not Downloaded is reaching business and developers. This requires a lot of strategic marketing. Currently we plan on having one marketing lead. This individual will work to attract new clients through targeted advertising, handling of public relations, and other means. Additionally, as the platform grows in size, we plan on hiring more software consultants to support developers, and ensure quality work.
         </p>
+        <br />
+        <br />
+        <br />
+        <center><p><a href="Documents/DevelopedNotDownloadedBusinessPlan.pdf" download="Developed-Not-Downloaded-Business-Plan">Downlaod a PDF version here.</a></p></center>
     </div>
 
 
