--- a/LiftCoefficientCalculator.html
+++ b/LiftCoefficientCalculator.html
@@ -10,7 +10,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Developed Not Downlaoded | Holiday Clicker App</title>
+    <title>Developed Not Downlaoded | Lift Coefficient Calculator App</title>
     <link rel="icon" type="image/x-icon" href="Images/DevLogo.ico" />
     <link rel="stylesheet" href="Styles/normalize.css" />
     <link rel="stylesheet" href="Styles/defaults.css" />
@@ -24,7 +24,7 @@
     <nav>
         <ul class="nav">
             <li class="navitem"><a href="index.html">Home</a></li>
-            <li class="dropdown navitem active">
+            <li class="dropdown navitem">
                 <a href="javascript:void(0)" class="dropbtn">iOS Apps</a>    <!--Void so it does not link to a webpage-->
                 <div class="dropdown-content">
                     <a href="PutterFitter.html">Putter Fitter</a>
@@ -34,7 +34,7 @@
                     <a href="HolidayClicker.html">Holiday Clicker</a>
                 </div>
             </li>
-            <li class="dropdown navitem">
+            <li class="dropdown navitem active">
                 <a href="javascript:void(0)" class="dropbtn">Andriod Apps</a>    <!--Void so it does not link to a webpage-->
                 <div class="dropdown-content">
                     <a href="LiftCoefficientCalculator.html">Lift Coefficient Calculator</a>
@@ -56,21 +56,21 @@
     <hr class="nav" />
     <nav>
         <ul class="sidenav">
-            <li class="sidenav"><img src="Images/AppLogos/HC.png" /></li>
+            <li class="sidenav"><img src="Images/AppLogos/Lift.png" /></li>
             <li class="sidenav"><a href="#screen_page_link">Screenshots</a></li>
             <li class="sidenav"><a href="#about_page_link">About</a></li>
             <li class="sidenav"><a href="#privacy_page_link">Privacy Policy</a></li>
         </ul>
     </nav>
-    <center><h1 class="pages">Holiday Clicker</h1></center>
+    <center><h1 class="pages">Lift Coefficient Calculator</h1></center>
     <h2 class="pages"><object id="screen_page_link">Screenshots</object></h2>
     <div class="pagesformat">
         <table class="format">
             <tr>
-                <td class="five"><img class="resizetwothrids" src="Images/HS/One.png" /></td>
-                <td class="five"><img class="resizetwothrids" src="Images/HS/Two.png" /></td>
-                <td class="five"><img class="resizetwothrids" src="Images/HS/Three.png" /></td>
-                <td class="five"><img class="resizetwothrids" src="Images/HS/Four.png" /></td>
+                <td class="five"><img class="resizetwothrids" src="Images/LS/One.png" /></td>
+                <td class="five"><img class="resizetwothrids" src="Images/LS/Two.png" /></td>
+                <td class="five"><img class="resizetwothrids" src="Images/LS/Three.png" /></td>
+                <td class="five"></td>
                 <td class="five"></td>
             </tr>
         </table>
@@ -78,31 +78,34 @@
     <h2 class="pages" id="about_page_link">About</h2>
     <div class="pagesformat">
         <h3>Current Availability</h3>
-        <p>Holiday Clicker is available for free on the iOS app store. It can only be downloaded as an iPhone application.</p>
-        <p><strong><a href="https://apps.apple.com/us/app/holiday-clicker/id1490141107">Download from the App Store here.</a></strong></p>
+        <p>Lift Coefficient Calculator is available for free on the Andriod app store. It can only be downloaded as an Andriod application.</p>
+        <p><strong><a href="https://play.google.com/store/apps/details?id=com.ar.liftcalculator">Download from the Google Play Store here.</a></strong></p>
         <h3>App Description</h3>
         <p>
-            Tap the falling objects before they reach the ground. More objects will continue to fall, each object gives you more points.
+            Easily and simultaneously calculate:
         </p>
-        <p>
-            Experience a new holiday theme each month.
-        </p>
-        <p>
-            Unlock the special promotional theme once you have reached a high score of 10000.
-        </p>
+        <ul>
+            <li>Lift Force</li>
+            <li>Density</li>
+            <li>Velocity</li>
+            <li>Area</li>
+            <li>Lift Coefficient</li>
+        </ul>
+        <p>Drop down menues now allow you to change units.</p>
 
         <h3>Now Includes</h3>
         <p>Recent updates have added the following:</p>
         <ul>
-            <li>Holiday themed screenshots</li>
+            <li>Options to change the units</li>
             <li>Updated Privacy Policy</li>
         </ul>
+
     </div>
     <h2 class="pages"><object id="privacy_page_link">Privacy Policy</object></h2>
     <div class="pagesformat">
         <h3>Privacy Policy</h3>
         <p>
-            Andrew Rotert built the Holiday Clicker app as a Free app. This SERVICE is provided by Andrew Rotert at no cost and is intended for use as is.
+            Andrew Rotert built the Lift Coefficient Calculator app as a Free app. This SERVICE is provided by Andrew Rotert at no cost and is intended for use as is.
             This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
             If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
             The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Putter Fitter unless otherwise defined in this Privacy Policy.
@@ -148,6 +151,7 @@
             If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at Andrew.Rotert@gmail.com.
         </p>
     </div>
+
 
     <footer>
         <div class="right_position">
