--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li class="dropdown navitem">
                 <a href="javascript:void(0)" class="dropbtn">Andriod Apps</a>    <!--Void so it does not link to a webpage-->
                 <div class="dropdown-content">
-                    <a href="LiftForceCalculator.html">Lift Coefficient Calculator</a>
+                    <a href="LiftCoefficientCalculator.html">Lift Coefficient Calculator</a>
                 </div>
             </li>
             <li class="dropdown navitem">
