--- a/iOS.html
+++ b/iOS.html
@@ -41,7 +41,7 @@
                 </div>
             </li>
             <li class="dropdown navitem active">
-                <a href="javascript:void(0)" class="dropbtn">Projects</a>
+                <a href="Projects.html" class="dropbtn">Projects</a>
                 <div class="dropdown-content">
                     <a href="iOS.html">iOS Projects</a>
                     <a href="Android.html">Andriod Projects</a>
@@ -137,7 +137,19 @@
                 <hr class="table" />
             </td>
             <td class="format">
-                <!--Blank-->
+                <img class="format" src="Images/AppLogos/OTH.png" alt="On The Hunt" />
+                <h2><i>On The Hunt</i></h2>
+                <p>Not Yet Published</p>
+                <p>View progress on Github: <a href="https://github.com/ajrotert">Visit Now</a></p>
+                <p>Language Used: C#, SQLite</p>
+                <p>About:</p>
+                <p class="just">
+                    The most complicated app yet. Uses GPS data to track user movements while hunting. Stores this data in a database.
+                    Uses the microphone to identify gun shots, when a gun shot is identified a marker is placed on the map. Certain processes
+                    are multithreaded to allow audio to run in parallel with the main functions.
+                </p>
+
+                <hr class="table" />
             </td>
         </tr>
     </table>
