--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
             </li>
             <li class="dropdown navitem">
-                <a href="javascript:void(0)" class="dropbtn">Projects</a>
+                <a href="Projects.html" class="dropbtn">Projects</a>
                 <div class="dropdown-content">
                     <a href="iOS.html">iOS Projects</a>
                     <a href="Android.html">Andriod Projects</a>
