--- a/Projects.html
+++ b/Projects.html
@@ -10,7 +10,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Developed Not Downlaoded | Developers Blog</title>
+    <title>Developed Not Downlaoded</title>
     <link rel="icon" type="image/x-icon" href="Images/DevLogo.ico" />
     <link rel="stylesheet" href="Styles/normalize.css" />
     <link rel="stylesheet" href="Styles/defaults.css" />
@@ -40,7 +40,7 @@
                     <a href="LiftCoefficientCalculator.html">Lift Coefficient Calculator</a>
                 </div>
             </li>
-            <li class="dropdown navitem">
+            <li class="dropdown navitem active">
                 <a href="Projects.html" class="dropbtn">Projects</a>
                 <div class="dropdown-content">
                     <a href="iOS.html">iOS Projects</a>
@@ -50,21 +50,35 @@
             </li>
             <li class="navitem"><a href="BusinessPlan.html">Business Plan</a></li>
             <li class="navitem"><a href="AboutMe.html">About Me</a></li>
-            <li class="navitem active"><a href="Blog.html">Blog</a></li>
+            <li class="navitem"><a href="Blog.html">Blog</a></li>
         </ul>
     </nav>
     <hr class="nav" />
 
-    <center><h1 class="pages">Blog</h1></center>
+    <center><h1 class="pages">Personal Projects</h1></center>
+    <center>
+        <h1>iOS Projects</h1>
+        <iframe src="iOS.html" class="size">iOS Projects could not load.</iframe>
+        <h3 class="margin"><a href="iOS.html"> View iOS Projects</a></h3>
+        <br />
+        <h1>Android Projects</h1>
+        <iframe src="Android.html" class="size">Android Projects could not load.</iframe>
+        <h3 class="margin"><a href="Android.html">View Android Projects</a></h3>
+        <br />
+        <h1>Other Projects</h1>
+        <iframe src="Other.html" class="size">Other Projects could not load.</iframe>
+        <h3 class="margin"><a href="Other.html">View Other Projects</a></h3>
+        <br />
+    </center>
 
-    <footer>
-        <div class="right_position">
-            <img src="Images/ARLogo.png" height="150" alt="Andrew Rotert Development Logo" />
-            <br />
-            <p class="bottom_position">&copy Copyright 2019-2020 Andrew Rotert</p>
-        </div>
+        <footer>
+            <div class="right_position">
+                <img src="Images/ARLogo.png" height="150" alt="Andrew Rotert Development Logo" />
+                <br />
+                <p class="bottom_position">&copy Copyright 2019-2020 Andrew Rotert</p>
+            </div>
 
-    </footer>
+        </footer>
 </body>
 </html>
 
