--- a/ContactUs.html
+++ b/ContactUs.html
@@ -10,7 +10,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Developed Not Downlaoded | Andriod Projects</title>
+    <title>Developed Not Downlaoded | Developers Blog</title>
     <link rel="icon" type="image/x-icon" href="Images/DevLogo.ico" />
     <link rel="stylesheet" href="Styles/normalize.css" />
     <link rel="stylesheet" href="Styles/defaults.css" />
@@ -40,7 +40,7 @@
                     <a href="LiftCoefficientCalculator.html">Lift Coefficient Calculator</a>
                 </div>
             </li>
-            <li class="dropdown navitem active">
+            <li class="dropdown navitem">
                 <a href="Projects.html" class="dropbtn">Projects</a>
                 <div class="dropdown-content">
                     <a href="iOS.html">iOS Projects</a>
@@ -50,36 +50,61 @@
             </li>
             <li class="navitem"><a href="BusinessPlan.html">Business Plan</a></li>
             <li class="navitem"><a href="AboutMe.html">About Me</a></li>
-            <li class="navitem"><a href="ContactUs.html">Contact Us</a></li>
+            <li class="navitem active"><a href="ContactUs.html">Contact Us</a></li>
         </ul>
     </nav>
     <hr class="nav" />
 
-    <center><h1 class="pages">Andriod Projects</h1></center>
+    <center><h1 class="pages">Contact Us</h1></center>
 
-    <table class="format">
-        <tr>
-            <td class="format">
-                <img class="format" src="Images/AppLogos/Lift.png" alt="Lift Force Calculator" />
-                <h2><i>Lift Force Calculator</i></h2>
-                <p>Published: <a href="LiftForceCalculator.html">Support Page</a></p>
-                <p>View at the Google Play Store: <a href="https://play.google.com/store/apps/details?id=com.ar.liftcalculator">Visit Now</a></p>
-                <p>Language Used: C#</p>
-                <p>About:</p>
-                <p class="just">
-                    Lift Coefficient Calclulator uses an Andriod based platform to calculate the lift coefficient formula.
-                    The user interface implaments event handlers for each text field, allowing calculations to happen
-                    as soon as all the need input is provided.
-                    
-                </p>
+    <div>
 
-                <hr class="table" />
-            </td>
-            <td class="format">
-                <!--Blank-->
-            </td>
-        </tr>
-    </table>
+        <table class="format">
+            <tr>
+                <td class="format">
+                    <img class="format" src="Images/Contact.png" alt="Logo" />
+
+                </td>
+                <td class="format">
+                    <h1>Developer: Andrew Rotert</h1>
+                    <h3>Email: Andrew.Rotert@gmail.com</h3>
+                    <h3>Email: Andrew.Rotert@trojans.dsu.edu</h3>
+                    <h3>Phone: (605) 215-8188</h3>
+                </td>
+            </tr>
+        </table>
+
+        <center><h1 class="pages">Site Map</h1></center>
+        <ul>
+            <li><a href="index.html">Home Page</a></li>
+            <li>iOS Apps
+                <ul>
+                    <li><a href="PutterFitter.html">Putter Fitter</a></li>
+                    <li><a href="TrapshootingScorecard.html">Trapshooting Scorecard</a></li>
+                    <li><a href="ComputerScienceCalculator.html">Computer Science Converter</a></li>
+                    <li><a href="SpeedometerPlusMap.html">Simple Speedometer and Map</a></li>
+                    <li><a href="HolidayClicker.html">Holiday Clicker</a></li>
+                </ul>
+            </li>
+            <li>Android Apps
+            <ul>
+                <li><a href="LiftCoefficientCalculator.html">Lift Coefficient Calculator</a></li>
+            </ul>
+            </li>
+            <li><a href="Projects.html">Projects</a>
+                <ul>
+                    <li><a href="iOS.html">iOS Projects</a></li>
+                    <li><a href="Android.html">Android Projects</a></li>
+                    <li><a href="Other.html">Other Projects</a></li>
+                </ul>
+            </li>
+            <li><a href="BusinessPlan.html">Business Plan</a></li>
+            <li><a href="AboutMe.html">About Me</a></li>
+            <li><a href="ContactUs.html">Contact Us</a></li>
+
+        </ul>
+
+    </div>
 
     <footer>
         <div class="right_position">
