--- a/LiftCoefficientCalculator.html
+++ b/LiftCoefficientCalculator.html
@@ -50,7 +50,7 @@
             </li>
             <li class="navitem"><a href="BusinessPlan.html">Business Plan</a></li>
             <li class="navitem"><a href="AboutMe.html">About Me</a></li>
-            <li class="navitem"><a href="Blog.html">Blog</a></li>
+            <li class="navitem"><a href="ContactUs.html">Contact Us</a></li>
         </ul>
     </nav>
     <hr class="nav" />
