--- a/ContactUs.html
+++ b/ContactUs.html
@@ -16,6 +16,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href=“Images/weblogo76.png">
     <link rel="apple-touch-icon" sizes="120x120" href=“Images/weblogo120.png">
     <link rel="apple-touch-icon" sizes="152x152" href=“Images/weblogo152.png">
+    <link rel="shortcut icon" href="Images/weblogo180.png" />
     <link rel="stylesheet" href="Styles/normalize.css" />
     <link rel="stylesheet" href="Styles/defaults.css" />
 
@@ -25,7 +26,7 @@
         <center><img src="Images/DevelopedNotDownloaded.png" height="300" alt="Logo" /></center>
         <hr class="nav" />
     </div>
-    <nav>
+    <nav id="topnavbar">
         <ul class="nav">
             <li class="navitem"><a href="index.html">Home</a></li>
             <li class="dropdown navitem">
@@ -81,7 +82,8 @@
         <center><h1 class="pages">Site Map</h1></center>
         <ul>
             <li><a href="index.html">Home Page</a></li>
-            <li>iOS Apps
+            <li>
+                iOS Apps
                 <ul>
                     <li><a href="PutterFitter.html">Putter Fitter</a></li>
                     <li><a href="TrapshootingScorecard.html">Trapshooting Scorecard</a></li>
@@ -90,12 +92,14 @@
                     <li><a href="HolidayClicker.html">Holiday Clicker</a></li>
                 </ul>
             </li>
-            <li>Android Apps
-            <ul>
-                <li><a href="LiftCoefficientCalculator.html">Lift Coefficient Calculator</a></li>
-            </ul>
+            <li>
+                Android Apps
+                <ul>
+                    <li><a href="LiftCoefficientCalculator.html">Lift Coefficient Calculator</a></li>
+                </ul>
             </li>
-            <li><a href="Projects.html">Projects</a>
+            <li>
+                <a href="Projects.html">Projects</a>
                 <ul>
                     <li><a href="iOS.html">iOS Projects</a></li>
                     <li><a href="Android.html">Android Projects</a></li>
@@ -118,6 +122,8 @@
         </div>
 
     </footer>
+    <script src="Dynamic/NavBar.js"></script>
+
 </body>
 </html>
 
