--- a/Other.html
+++ b/Other.html
@@ -16,6 +16,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href=“Images/weblogo76.png">
     <link rel="apple-touch-icon" sizes="120x120" href=“Images/weblogo120.png">
     <link rel="apple-touch-icon" sizes="152x152" href=“Images/weblogo152.png">
+    <link rel="shortcut icon" href="Images/weblogo180.png" />
     <link rel="stylesheet" href="Styles/normalize.css" />
     <link rel="stylesheet" href="Styles/defaults.css" />
 
@@ -25,7 +26,7 @@
         <center><img src="Images/DevelopedNotDownloaded.png" height="300" alt="Logo" /></center>
         <hr class="nav" />
     </div>
-    <nav>
+    <nav id="topnavbar">
         <ul class="nav">
             <li class="navitem"><a href="index.html">Home</a></li>
             <li class="dropdown navitem">
@@ -116,7 +117,7 @@
                 <p class="just">
                     Mini-Golf is a command line game writen completely in assembly. The game takes a power level and angle
                     as input. The assembly code has to load the angle as a floating point to calculate the right angle. The
-                    game ends when the . gets to the 0. 
+                    game ends when the . gets to the 0.
                 </p>
 
                 <hr class="table" />
@@ -130,7 +131,7 @@
                 <p>Language Used: HTML5, CSS3</p>
                 <p>About:</p>
                 <p class="just">
-                    Developed Not Downloaded is a series of static webpages designed with HTML and CSS. 
+                    Developed Not Downloaded is a series of static webpages designed with HTML and CSS.
                 </p>
 
                 <hr class="table" />
@@ -165,6 +166,8 @@
         </div>
 
     </footer>
+    <script src="Dynamic/NavBar.js"></script>
+
 </body>
 </html>
 
