--- a/PutterFitter.html
+++ b/PutterFitter.html
@@ -16,6 +16,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href=“Images/weblogo76.png">
     <link rel="apple-touch-icon" sizes="120x120" href=“Images/weblogo120.png">
     <link rel="apple-touch-icon" sizes="152x152" href=“Images/weblogo152.png">
+    <link rel="shortcut icon" href="Images/weblogo180.png" />
     <link rel="stylesheet" href="Styles/normalize.css" />
     <link rel="stylesheet" href="Styles/defaults.css" />
 
@@ -25,7 +26,7 @@
         <center><img src="Images/DevelopedNotDownloaded.png" height="300" alt="Logo" /></center>
         <hr class="nav" />
     </div>
-    <nav>
+    <nav id="topnavbar">
         <ul class="nav">
             <li class="navitem"><a href="index.html">Home</a></li>
             <li class="dropdown navitem active">
@@ -60,7 +61,7 @@
     <hr class="nav" />
     <nav>
         <ul class="sidenav">
-            <li class="sidenav"><img src="Images/AppLogos/Putter.png"/></li>
+            <li class="sidenav"><img src="Images/AppLogos/Putter.png" /></li>
             <li class="sidenav"><a href="#screen_page_link">Screenshots</a></li>
             <li class="sidenav"><a href="#about_page_link">About</a></li>
             <li class="sidenav"><a href="#privacy_page_link">Privacy Policy</a></li>
@@ -160,6 +161,8 @@
         </div>
 
     </footer>
+    <script src="Dynamic/NavBar.js"></script>
+
 </body>
 </html>
 
