--- a/iOS.html
+++ b/iOS.html
@@ -16,6 +16,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href=“Images/weblogo76.png">
     <link rel="apple-touch-icon" sizes="120x120" href=“Images/weblogo120.png">
     <link rel="apple-touch-icon" sizes="152x152" href=“Images/weblogo152.png">
+    <link rel="shortcut icon" href="Images/weblogo180.png" />
     <link rel="stylesheet" href="Styles/normalize.css" />
     <link rel="stylesheet" href="Styles/defaults.css" />
 
@@ -23,9 +24,9 @@
 <body>
     <div>
         <center><img src="Images/DevelopedNotDownloaded.png" height="300" alt="Logo" /></center>
-        <hr class="nav"/>
+        <hr class="nav" />
     </div>
-    <nav>
+    <nav id="topnavbar">
         <ul class="nav">
             <li class="navitem"><a href="index.html">Home</a></li>
             <li class="dropdown navitem">
@@ -135,7 +136,7 @@
                 <p class="just">
                     Holiday Clicker uses the current month and multiple threads to create a simple click based game.
                     Each thread creates a new object and the user must tap that object or the game ends. Scores, and user
-                    settings are saved, and loaded when the app is launched. 
+                    settings are saved, and loaded when the app is launched.
                 </p>
 
                 <hr class="table" />
@@ -165,6 +166,8 @@
         </div>
 
     </footer>
+    <script src="Dynamic/NavBar.js"></script>
+
 </body>
 </html>
 
