--- a/AboutMe.html
+++ b/AboutMe.html
@@ -16,6 +16,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href=“Images/weblogo76.png">
     <link rel="apple-touch-icon" sizes="120x120" href=“Images/weblogo120.png">
     <link rel="apple-touch-icon" sizes="152x152" href=“Images/weblogo152.png">
+    <link rel="shortcut icon" href="Images/weblogo180.png" />
     <link rel="stylesheet" href="Styles/normalize.css" />
     <link rel="stylesheet" href="Styles/defaults.css" />
 
@@ -25,7 +26,7 @@
         <center><img src="Images/DevelopedNotDownloaded.png" height="300" alt="Logo" /></center>
         <hr class="nav" />
     </div>
-    <nav>
+    <nav id="topnavbar">
         <ul class="nav">
             <li class="navitem"><a href="index.html">Home</a></li>
             <li class="dropdown navitem">
@@ -82,10 +83,10 @@
     <center><h1 class="pages">Resume</h1></center>
     <div>
         <center>
-        <h1>Andrew Rotert</h1>
-        <h3>Sioux Falls, SD</h3>
-        <h3>(605) 215-8188</h3>
-        <h3>Andrew.Rotert@trojans.dsu.edu</h3>
+            <h1>Andrew Rotert</h1>
+            <h3>Sioux Falls, SD</h3>
+            <h3>(605) 215-8188</h3>
+            <h3>Andrew.Rotert@trojans.dsu.edu</h3>
         </center>
 
         <h2>Education</h2>
@@ -100,15 +101,17 @@
         <p>G.P.A: 3.89</p>
         <h2>Computer Skills</h2>
         <ul>
-            <li>Programming experience with:
-            <ul>
-                <li>C#(Advanced), C/C++(Advanced), Python(Intermediate) and Java(Intermediate)</li>
-            </ul>
+            <li>
+                Programming experience with:
+                <ul>
+                    <li>C#(Advanced), C/C++(Advanced), Python(Intermediate) and Java(Intermediate)</li>
+                </ul>
             </li>
-            <li>Use with:
-            <ul>
-                <li>Visual Studio, Command Line, and XCode</li>
-            </ul>
+            <li>
+                Use with:
+                <ul>
+                    <li>Visual Studio, Command Line, and XCode</li>
+                </ul>
             </li>
         </ul>
         <h2>Related Coursework</h2>
@@ -117,27 +120,32 @@
             <li>Info Security Fundamentals, Assembly, Networking, Operating Systems</li>
             <li>Calculus I, Calculus II, Introduction to Discrete Math, Introduction to Statistics, Discrete Mathematics, and Signals and Systems</li>
         </ul>
-	    <h2>Projects</h2>
+        <h2>Projects</h2>
         <p>View my projects <a href="Projects.html">here</a></p>
         <ul>
-            <li>iOS App Development
-            <ul>
-                <li>https://itunes.apple.com/us/developer/andrew-rotert/id1448329272</li>
-                <li>Developed and published multiple apps using concepts learned in Object Orientated Programming, Data Structures, and Assembly.</li>
-            </ul>
+            <li>
+                iOS App Development
+                <ul>
+                    <li>https://itunes.apple.com/us/developer/andrew-rotert/id1448329272</li>
+                    <li>Developed and published multiple apps using concepts learned in Object Orientated Programming, Data Structures, and Assembly.</li>
+                </ul>
             </li>
-            <li>Programming Competitions
-            <ul>
-                <li>Competed in multiple programing competitions:
-                <ul><li>ACM Regional, DSU local competition, Google Hashcode, MCIS, and Google CodeJam</li></ul>
-                </li>
-            </ul>
+            <li>
+                Programming Competitions
+                <ul>
+                    <li>
+                        Competed in multiple programing competitions:
+                        <ul><li>ACM Regional, DSU local competition, Google Hashcode, MCIS, and Google CodeJam</li></ul>
+                    </li>
+                </ul>
             </li>
-            <li>Window Forms Projects
-            <ul><li>Developed multiple windows forms using concepts learned in Object Orientated Programming and Data Structures.</li></ul>
+            <li>
+                Window Forms Projects
+                <ul><li>Developed multiple windows forms using concepts learned in Object Orientated Programming and Data Structures.</li></ul>
             </li>
-            <li>Android App Development
-            <ul><li>Using concepts learned in Data Structures and from other projects, developed and published an Android mobile application.</li></ul>
+            <li>
+                Android App Development
+                <ul><li>Using concepts learned in Data Structures and from other projects, developed and published an Android mobile application.</li></ul>
             </li>
         </ul>
         <h2>Involvements and Memberships</h2>
@@ -149,7 +157,7 @@
         <h2>Work Experience</h2>
         <p>Austads Golf: December 2013 to present</p>
         <p>Position: Retail Sales Associate</p>
-    
+
     </div>
 
     <footer>
@@ -160,6 +168,8 @@
         </div>
 
     </footer>
+    <script src="Dynamic/NavBar.js"></script>
+
 </body>
 </html>
 
