--- a/index.html
+++ b/index.html
@@ -14,16 +14,18 @@
     <link rel="apple-touch-icon" sizes="76x76" href=“Images/weblogo76.png">
     <link rel="apple-touch-icon" sizes="120x120" href=“Images/weblogo120.png">
     <link rel="apple-touch-icon" sizes="152x152" href=“Images/weblogo152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="Images/weblogo180.png" />
+    <link rel="shortcut icon" href="Images/weblogo180.png" />
     <link rel="stylesheet" href="Styles/normalize.css" />
     <link rel="stylesheet" href="Styles/defaults.css" />
-
 </head>
 <body>
+
     <div>
         <center><img src="Images/DevelopedNotDownloaded.png" height="300" alt="Logo" /></center>
         <hr class="nav" />
     </div>
-    <nav>
+    <nav id="topnavbar">
         <ul class="nav">
             <li class="navitem active"><a href="index.html">Home</a></li>
             <li class="dropdown navitem">
@@ -55,7 +57,9 @@
             <li class="navitem"><a href="ContactUs.html">Contact Us</a></li>
         </ul>
     </nav>
+
     <hr class="nav" />
+
     <div class="container">
         <img src="Images/LaptopFW.png" alt="Laptop" class="resize" />
         <div class="centered">
@@ -109,6 +113,9 @@
         </div>
 
     </footer>
+
+    <script src="Dynamic/NavBar.js"></script>
+
 </body>
 </html>
 
