--- a/Projects.html
+++ b/Projects.html
@@ -61,6 +61,8 @@
     <hr class="nav" />
 
     <center><h1 class="pages">Personal Projects</h1></center>
+    <center> <h3> <a href="https://github.com/ajrotert/repositories">View Github Repositories</a></h3></center>
+
     <center>
         <h1>iOS Projects</h1>
         <iframe src="iOS.html" class="size">iOS Projects could not load.</iframe>
