--- a/Other.html
+++ b/Other.html
@@ -61,6 +61,7 @@
     <hr class="nav" />
 
     <center><h1 class="pages">Other Projects</h1></center>
+    <center> <h3> <a href="https://github.com/ajrotert/repositories">View Github Repositories</a></h3></center>
 
     <table class="format">
         <tr>
@@ -155,6 +156,7 @@
                 <hr class="table" />
             </td>
         </tr>
+        
     </table>
 
 
