--- a/Android.html
+++ b/Android.html
@@ -30,31 +30,12 @@
     <hr class="nav" />
 
     <center><h1 class="pages">Andriod Projects</h1></center>
+
+    <hr class="projects" />
     <center> <h3> <a href="https://github.com/ajrotert/repositories">View Github Repositories</a></h3></center>
+    <hr class="projects" />
 
-    <table class="format">
-        <tr>
-            <td class="format">
-                <img class="format" src="Images/AppLogos/Lift.png" alt="Lift Force Calculator" />
-                <h2><i>Lift Force Calculator</i></h2>
-                <p>Published: <a href="LiftForceCalculator.html">Support Page</a></p>
-                <p>View at the Google Play Store: <a href="https://play.google.com/store/apps/details?id=com.ar.liftcalculator">Visit Now</a></p>
-                <p>Language Used: C#</p>
-                <p>About:</p>
-                <p class="just">
-                    Lift Coefficient Calclulator uses an Andriod based platform to calculate the lift coefficient formula.
-                    The user interface implaments event handlers for each text field, allowing calculations to happen
-                    as soon as all the need input is provided.
-
-                </p>
-
-                <hr class="table" />
-            </td>
-            <td class="format">
-                <!--Blank-->
-            </td>
-        </tr>
-    </table>
+    <object id="Android-Table"></object>
 
     <footer>
         <div class="right_position">
@@ -64,9 +45,12 @@
         </div>
 
     </footer>
+
     <script src="Dynamic/NavigationBarJS.js"></script>
 
     <script src="Dynamic/NavBar.js"></script>
+
+    <script src="Dynamic/loadprojects.js"></script>
 
 </body>
 </html>
