--- a/iOS.html
+++ b/iOS.html
@@ -30,105 +30,13 @@
 
     <hr class="nav" />
     <center><h1 class="pages">iOS Projects</h1></center>
+
+    <hr class="projects" />
     <center> <h3> <a href="https://github.com/ajrotert/repositories">View Github Repositories</a></h3></center>
-    <table class="format">
-        <tr>
-            <td class="format">
-                <img class="format" src="Images/AppLogos/Putter.png" alt="Putter Fitter" />
-                <h2><i>Putter Fitter</i></h2>
-                <p>Published: <a href="PutterFitter.html">Support Page</a></p>
-                <p>View at the App Store: <a href="https://itunes.apple.com/us/app/putter-fitter/id1448329273?mt=8">Visit Now</a></p>
-                <p>Language Used: C#, SQLite</p>
-                <p>About:</p>
-                <p class="just">
-                    Putter Fitter helps a user select a putter based on their putting style.
-                    This works based on a decision tree. Depending on how they answer, their results are put into a priority queue with varying weights.
-                    The features with more influence will determine what putter will work best for them.
-                </p>
+    <hr class="projects" />
 
-                <hr class="table" />
-            </td>
-            <td class="format">
-                <img class="format" src="Images/AppLogos/Trap.png" alt="Trap Shooting" />
-                <h2><i>Trap Shooting Scorecard</i></h2>
-                <p>Published: <a href="TrapshootingScorecard.html">Support Page</a></p>
-                <p>View at the App Store: <a href="https://itunes.apple.com/us/app/trap-shooting-scorecard/id1450821405?mt=8">Visit Now</a></p>
-                <p>Language Used: C#, SQLite</p>
-                <p>About:</p>
-                <p class="just">
-                    Formed around an easy to use interface, Trapshooting Scorecard scores your
-                    round of trap for up to five shooters. After a round is complete, your scores are loaded
-                    into a database. Past rounds can then be viewed or deleted. Once a round is started, it can be paused and scores can be modified.
-                </p>
+    <object id="iOS-Table"></object>
 
-                <hr class="table" />
-            </td>
-        </tr>
-        <tr>
-            <td class="format">
-                <img class="format" src="Images/AppLogos/Calc.png" alt="Computer Science Calculator" />
-                <h2><i>Computer Science Calculator</i></h2>
-                <p>Published: <a href="ComputerScienceCalculator.html">Support Page</a></p>
-                <p>View at the App Store: <a href="https://itunes.apple.com/us/app/computer-science-converter/id1451753843?mt=8">Visit Now</a></p>
-                <p>Language Used: C#</p>
-                <p>About:</p>
-                <p class="just">
-                    Computer Science Calculators Object Oriented Design allows for many different types of numeric conversions.
-                    Event handlers allow for fewer button presses to make the user interaction easier. Interface objects, such as scrollable views,
-                    are explored to allow for more simplicity while using it.
-                </p>
-
-                <hr class="table" />
-            </td>
-            <td class="format">
-                <img class="format" src="Images/AppLogos/Speed.png" alt="Simple Speedometer Plus Map" />
-                <h2><i>Simple Speedometer Plus Map</i></h2>
-                <p>Published: <a href="SpeedometerPlusMap.html">Support Page</a></p>
-                <p>View at the App Store: <a href="https://apps.apple.com/us/app/simple-speedometer-and-map/id1485405938">Visit Now</a></p>
-                <p>Language Used: C#</p>
-                <p>About:</p>
-                <p class="just">
-                    Simple Speedometer and Map implements GPS data to effectively track a users speed. Using a custom algorithm,
-                    data points are selected to trace the users trip on a integrated map. A user can switch between the speedometer and map
-                    by rotating their device's screen.
-                </p>
-
-                <hr class="table" />
-            </td>
-        </tr>
-        <tr>
-            <td class="format">
-                <img class="format" src="Images/AppLogos/HC.png" alt="Holiday Clicker" />
-                <h2><i>Holiday Clicker</i></h2>
-                <p>Published: <a href="HolidayClicker.html">Support Page</a></p>
-                <p>View at the App Store: <a href="https://apps.apple.com/us/app/holiday-clicker/id1490141107">Visit Now</a></p>
-                <p>Language Used: C#, SQLite</p>
-                <p>About:</p>
-                <p class="just">
-                    Holiday Clicker uses the current month and multiple threads to create a simple click based game.
-                    Each thread creates a new object and the user must tap that object or the game ends. Scores, and user
-                    settings are saved, and loaded when the app is launched.
-                </p>
-
-                <hr class="table" />
-            </td>
-            <td class="format">
-                <img class="format" src="Images/AppLogos/OTH.png" alt="On The Hunt" />
-                <h2><i>On The Hunt</i></h2>
-                <p>Not Yet Published</p>
-                <p>View progress on Github: <a href="https://github.com/ajrotert">Visit Now</a></p>
-                <p>Language Used: C#, SQLite</p>
-                <p>About:</p>
-                <p class="just">
-                    The most complicated app yet. Uses GPS data to track user movements while hunting. Stores this data in a database.
-                    Uses the microphone to identify gun shots, when a gun shot is identified a marker is placed on the map. Certain processes
-                    are multithreaded to allow audio to run in parallel with the main functions.
-                </p>
-
-                <hr class="table" />
-            </td>
-        </tr>
-    </table>
     <footer>
         <div class="right_position">
             <img src="Images/ARLogo.png" height="150" alt="Andrew Rotert Development Logo" />
@@ -137,9 +45,12 @@
         </div>
 
     </footer>
+
     <script src="Dynamic/NavigationBarJS.js"></script>
 
     <script src="Dynamic/NavBar.js"></script>
+
+    <script src="Dynamic/loadprojects.js"></script>
 
 </body>
 </html>
