--- a/Projects.html
+++ b/Projects.html
@@ -31,22 +31,30 @@
     <hr class="nav" />
 
     <center><h1 class="pages">Personal Projects</h1></center>
-    <center> <h3> <a href="https://github.com/ajrotert/repositories">View Github Repositories</a></h3></center>
 
-    <center>
-        <h1>iOS Projects</h1>
-        <iframe src="iOS.html" class="size">iOS Projects could not load.</iframe>
-        <h3 class="margin"><a href="iOS.html"> View iOS Projects</a></h3>
-        <br />
-        <h1>Android Projects</h1>
-        <iframe src="Android.html" class="size">Android Projects could not load.</iframe>
-        <h3 class="margin"><a href="Android.html">View Android Projects</a></h3>
-        <br />
-        <h1>Other Projects</h1>
-        <iframe src="Other.html" class="size">Other Projects could not load.</iframe>
-        <h3 class="margin"><a href="Other.html">View Other Projects</a></h3>
-        <br />
-    </center>
+    <hr class="projects" />
+    <center> <h3> <a href="https://github.com/ajrotert/repositories">View Github Repositories</a></h3></center>
+    <hr class="projects" />
+
+    <br />
+
+    <div class="smaller">
+        <center>
+            <h1>iOS Projects</h1>
+            <h3 class="margin"><a href="iOS.html"> View iOS Projects</a></h3>
+        </center>
+        <object id="iOS-Table"></object>
+        <center>
+            <h1>Android Projects</h1>
+            <h3 class="margin"><a href="Android.html">View Android Projects</a></h3>
+        </center>
+        <object id="Android-Table"></object>
+        <center>
+            <h1>Other Projects</h1>
+            <h3 class="margin"><a href="Other.html">View Other Projects</a></h3>
+        </center>
+        <object id="Other-Table"></object>
+    </div>
 
     <footer>
         <div class="right_position">
@@ -56,9 +64,12 @@
         </div>
 
     </footer>
+
     <script src="Dynamic/NavigationBarJS.js"></script>
 
     <script src="Dynamic/NavBar.js"></script>
+
+    <script src="Dynamic/loadprojects.js"></script>
 
 </body>
 </html>
