--- a/LiftCoefficientCalculator.html
+++ b/LiftCoefficientCalculator.html
@@ -30,7 +30,7 @@
 
     <hr class="nav" />
     <nav>
-        <ul class="sidenav">
+        <ul class="sidenav effect">
             <li class="sidenav"><img src="Images/AppLogos/Lift.png" /></li>
             <li class="sidenav"><a href="#screen_page_link">Screenshots</a></li>
             <li class="sidenav"><a href="#about_page_link">About</a></li>
